Enigma/testing/error/fixedrotorwrongplace.inp
* B GAMMA BETA I II AAAA (BC)
IJOJDSOFJDOS